--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Dillon Jordan Photography</title>
 </head>
 <body>
-  <p>DILLON&nbsp;JORDAN&nbsp;PHOTOGRAPHY</p>
+  <img src="dillonjordanphotography.svg" alt="Dillon Jordan Photography">
 </body>
 </html>
