--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Dillon Jordan Photography</title>
+  <title>dillon jordan photos</title>
 </head>
 <body>
-  <img src="dillonjordanphotography.svg" alt="Dillon Jordan Photography">
+  <a href="/"><h1>dillon jordan photos</h1></a>
+  <p>dillonjordan2544@gmail.com</p>
+  <a href="gallery/01.jpg"><img src="gallery/01.jpg" alt="Photo"></a>
+  <a href="gallery/02.jpg"><img src="gallery/02.jpg" alt="Photo"></a>
+  <a href="gallery/03.jpg"><img src="gallery/03.jpg" alt="Photo"></a>
+  <a href="gallery/04.jpg"><img src="gallery/04.jpg" alt="Photo"></a>
+  <a href="gallery/05.jpg"><img src="gallery/05.jpg" alt="Photo"></a>
+  <a href="gallery/06.jpg"><img src="gallery/06.jpg" alt="Photo"></a>
+  <a href="gallery/07.jpg"><img src="gallery/07.jpg" alt="Photo"></a>
+  <a href="gallery/08.jpg"><img src="gallery/08.jpg" alt="Photo"></a>
+  <a href="gallery/09.jpg"><img src="gallery/09.jpg" alt="Photo"></a>
+  <a href="gallery/10.jpg"><img src="gallery/10.jpg" alt="Photo"></a>
+  <a href="gallery/11.jpg"><img src="gallery/11.jpg" alt="Photo"></a>
+  <a href="gallery/12.jpg"><img src="gallery/12.jpg" alt="Photo"></a>
+  <a href="gallery/13.jpg"><img src="gallery/13.jpg" alt="Photo"></a>
+  <a href="gallery/14.jpg"><img src="gallery/14.jpg" alt="Photo"></a>
+  <a href="gallery/15.jpg"><img src="gallery/15.jpg" alt="Photo"></a>
+  <a href="gallery/16.jpg"><img src="gallery/16.jpg" alt="Photo"></a>
+  <a href="gallery/17.jpg"><img src="gallery/17.jpg" alt="Photo"></a>
+  <small>Copyright &copy; Dillon Jordan Photos 2019</small>
 </body>
 </html>
