--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <a href="/index.html"><h1>dillon jordan photos</h1></a>
+  <a href="index.html"><h1>dillon jordan photos</h1></a>
   <p>dillonjordan2544@gmail.com</p>
   <a href="gallery/01.jpg"><img src="gallery/01.jpg" alt="Photo"></a>
   <a href="gallery/02.jpg"><img src="gallery/02.jpg" alt="Photo"></a>
