--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <a href="index.html"><h1>dillon jordan photos</h1></a>
-  <p>dillonjordan2544@gmail.com</p>
+  <p>tour photographer | <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
   <a href="gallery/01.jpg"><img src="gallery/01.jpg" alt="Photo"></a>
   <a href="gallery/02.jpg"><img src="gallery/02.jpg" alt="Photo"></a>
   <a href="gallery/03.jpg"><img src="gallery/03.jpg" alt="Photo"></a>
