--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <a href="gallery/15.jpg"><img src="gallery/15.jpg" alt="Photo"></a>
   <a href="gallery/16.jpg"><img src="gallery/16.jpg" alt="Photo"></a>
   <a href="gallery/17.jpg"><img src="gallery/17.jpg" alt="Photo"></a>
-  <small>Copyright &copy; Dillon Jordan Photos 2019</small>
+  <small>Copyright &copy; Dillon Jordan Photos 2019</small><br>
+  <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
 </body>
 </html>
