--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <a href="index.html"><h1>dillon jordan photos</h1></a>
+  <a href="/"><h1>dillon jordan photos</h1></a>
   <p>tour photographer | <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
   <section id="gallery">
     <a href="gallery/01.jpg"><img src="gallery/01.jpg" alt="Photo"></a>
