--- a/index.html
+++ b/index.html
@@ -14,23 +14,30 @@
   <a href="/"><h1>dillon jordan photos</h1></a>
   <p>tour photographer | <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
   <section id="gallery">
-    <a href="gallery/01.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/01.jpg" alt="Photo"></a>
-    <a href="gallery/02.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/02.jpg" alt="Photo"></a>
-    <a href="gallery/03.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/03.jpg" alt="Photo"></a>
-    <a href="gallery/04.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/04.jpg" alt="Photo"></a>
-    <a href="gallery/05.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/05.jpg" alt="Photo"></a>
-    <a href="gallery/06.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/06.jpg" alt="Photo"></a>
-    <a href="gallery/07.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/07.jpg" alt="Photo"></a>
-    <a href="gallery/08.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/08.jpg" alt="Photo"></a>
-    <a href="gallery/09.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/09.jpg" alt="Photo"></a>
-    <a href="gallery/10.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/10.jpg" alt="Photo"></a>
-    <a href="gallery/11.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/11.jpg" alt="Photo"></a>
-    <a href="gallery/12.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/12.jpg" alt="Photo"></a>
-    <a href="gallery/13.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/13.jpg" alt="Photo"></a>
-    <a href="gallery/14.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/14.jpg" alt="Photo"></a>
-    <a href="gallery/15.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/15.jpg" alt="Photo"></a>
-    <a href="gallery/16.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/16.jpg" alt="Photo"></a>
-    <a href="gallery/17.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/17.jpg" alt="Photo"></a>
+    <a href="gallery/childish/04.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/04.jpg" alt="Photo"></a>
+    <a href="gallery/childish/01.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/01.jpg" alt="Photo"></a>
+    <a href="gallery/childish/02.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/02.jpg" alt="Photo"></a>
+    <a href="gallery/childish/05.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/05.jpg" alt="Photo"></a>
+    <a href="gallery/billie/01.jpg"><div class="hovertext"><p>Billie Eilish</p></div><img src="gallery/billie/01.jpg" alt="Photo"></a>
+    <a href="gallery/sebastian/01.jpg"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/01.jpg" alt="Photo"></a>
+    <a href="gallery/sebastian/02.jpg"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/02.jpg" alt="Photo"></a>
+    <a href="gallery/flora/01.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/01.jpg" alt="Photo"></a>
+    <a href="gallery/flora/02.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/02.jpg" alt="Photo"></a>
+    <a href="gallery/flora/03.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/03.jpg" alt="Photo"></a>
+    <a href="gallery/flora/04.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/04.jpg" alt="Photo"></a>
+    <a href="gallery/flora/05.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/05.jpg" alt="Photo"></a>
+    <a href="gallery/flora/06.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/06.jpg" alt="Photo"></a>
+    <a href="gallery/louis/01.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/01.jpg" alt="Photo"></a>
+    <a href="gallery/louis/02.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/02.jpg" alt="Photo"></a>
+    <a href="gallery/louis/03.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/03.jpg" alt="Photo"></a>
+    <a href="gallery/louis/04.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/04.jpg" alt="Photo"></a>
+    <a href="gallery/louis/05.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/05.jpg" alt="Photo"></a>
+    <a href="gallery/louis/06.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/06.jpg" alt="Photo"></a>
+    <a href="gallery/louis/07.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/07.jpg" alt="Photo"></a>
+    <a href="gallery/louis/08.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/08.jpg" alt="Photo"></a>
+    <a href="gallery/louis/09.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/09.jpg" alt="Photo"></a>
+    <a href="gallery/louis/10.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/10.jpg" alt="Photo"></a>
+    <a href="gallery/louis/11.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/11.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2019</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
