--- a/index.html
+++ b/index.html
@@ -16,34 +16,16 @@
 </head>
 <body>
   <a href="/"><h1>dillon jordan photos</h1></a>
-  <p>tour photographer | <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
-  <section id="gallery">
-    <a href="gallery/childish/04.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/04.jpg" alt="Photo"></a>
-    <a href="gallery/childish/01.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/01.jpg" alt="Photo"></a>
-    <a href="gallery/childish/02.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/02.jpg" alt="Photo"></a>
-    <a href="gallery/childish/05.jpg"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/05.jpg" alt="Photo"></a>
-    <a href="gallery/billie/01.jpg"><div class="hovertext"><p>Billie Eilish</p></div><img src="gallery/billie/01.jpg" alt="Photo"></a>
-    <a href="gallery/sebastian/01.jpg"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/01.jpg" alt="Photo"></a>
-    <a href="gallery/sebastian/02.jpg"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/02.jpg" alt="Photo"></a>
-    <a href="gallery/flora/01.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/01.jpg" alt="Photo"></a>
-    <a href="gallery/flora/02.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/02.jpg" alt="Photo"></a>
-    <a href="gallery/flora/03.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/03.jpg" alt="Photo"></a>
-    <a href="gallery/flora/04.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/04.jpg" alt="Photo"></a>
-    <a href="gallery/flora/05.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/05.jpg" alt="Photo"></a>
-    <a href="gallery/flora/06.jpg"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/06.jpg" alt="Photo"></a>
-    <a href="gallery/louis/01.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/01.jpg" alt="Photo"></a>
-    <a href="gallery/louis/02.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/02.jpg" alt="Photo"></a>
-    <a href="gallery/louis/03.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/03.jpg" alt="Photo"></a>
-    <a href="gallery/louis/04.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/04.jpg" alt="Photo"></a>
-    <a href="gallery/louis/05.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/05.jpg" alt="Photo"></a>
-    <a href="gallery/louis/06.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/06.jpg" alt="Photo"></a>
-    <a href="gallery/louis/07.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/07.jpg" alt="Photo"></a>
-    <a href="gallery/louis/08.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/08.jpg" alt="Photo"></a>
-    <a href="gallery/louis/09.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/09.jpg" alt="Photo"></a>
-    <a href="gallery/louis/10.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/10.jpg" alt="Photo"></a>
-    <a href="gallery/louis/11.jpg"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/11.jpg" alt="Photo"></a>
+  <p>tour photographer<br><a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br><a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
+  <section id="gallery" class="main">
+    <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/04.jpg" alt="Photo"></a>
+    <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img src="gallery/billie/01.jpg" alt="Photo"></a>
+    <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img src="gallery/madeon/01.jpg" alt="Photo"></a>
+    <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/01.jpg" alt="Photo"></a>
+    <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/02.jpg" alt="Photo"></a>
+    <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/01.jpg" alt="Photo"></a>
   </section>
-  <small>Copyright &copy; Dillon Jordan Photos 2019</small><br>
+  <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
 </body>
 </html>
