--- a/flora.html
+++ b/flora.html
@@ -17,12 +17,13 @@
 <body>
   <a href="/"><h1>dillon jordan photos</h1></a>
   <h1>Flora Cash</h1>
+  <h2>Fall Tour 2019, August - November</h2>
   <section id="gallery">
     <a href="gallery/flora/01.jpg"><img src="gallery/flora/01.jpg" alt="Photo"></a>
     <a href="gallery/flora/02.jpg"><img src="gallery/flora/02.jpg" alt="Photo"></a>
     <a href="gallery/flora/03.jpg"><img src="gallery/flora/03.jpg" alt="Photo"></a>
     <a href="gallery/flora/04.jpg"><img src="gallery/flora/04.jpg" alt="Photo"></a>
-    <!-- <a href="gallery/flora/05.jpg"><img src="gallery/flora/05.jpg" alt="Photo"></a> -->
+    <a href="gallery/flora/05.jpg"><img src="gallery/flora/05.jpg" alt="Photo"></a>
     <a href="gallery/flora/06.jpg"><img src="gallery/flora/06.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
