--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 </head>
 <body>
   <a href="/"><h1>dillon jordan photos</h1></a>
+  <img id="dil" src="dillon.jpg" alt="Dillon Jordan">
   <p>tour photographer<br><a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br><a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
   <section id="gallery" class="main">
     <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img src="gallery/childish/04.jpg" alt="Photo"></a>
-    <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img src="gallery/billie/01.jpg" alt="Photo"></a>
-    <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img src="gallery/madeon/01.jpg" alt="Photo"></a>
     <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img src="gallery/flora/01.jpg" alt="Photo"></a>
+    <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img src="gallery/billie/01.jpg" alt="Photo"></a>
     <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img src="gallery/louis/02.jpg" alt="Photo"></a>
+    <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img src="gallery/madeon/01.jpg" alt="Photo"></a>
     <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img src="gallery/sebastian/01.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
