--- a/childish.html
+++ b/childish.html
@@ -18,10 +18,10 @@
   <a href="/"><h1>dillon jordan photos</h1></a>
   <h1>Childish Gambino</h1>
   <section id="gallery">
-    <a href="gallery/childish/01.jpg"><img src="gallery/childish/01.jpg" alt="Photo"></a>
-    <a href="gallery/childish/02.jpg"><img src="gallery/childish/02.jpg" alt="Photo"></a>
-    <a href="gallery/childish/04.jpg"><img src="gallery/childish/04.jpg" alt="Photo"></a>
-    <a href="gallery/childish/05.jpg"><img src="gallery/childish/05.jpg" alt="Photo"></a>
+    <a href="gallery/childish/01.jpg"><img src="gallery/childish/01.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/childish/02.jpg"><img src="gallery/childish/02.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/childish/04.jpg"><img src="gallery/childish/04.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/childish/05.jpg"><img src="gallery/childish/05.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
