--- a/flora.html
+++ b/flora.html
@@ -19,12 +19,12 @@
   <h1>Flora Cash</h1>
   <h2>Fall Tour 2019, August - November</h2>
   <section id="gallery">
-    <a href="gallery/flora/01.jpg"><img src="gallery/flora/01.jpg" alt="Photo"></a>
-    <a href="gallery/flora/02.jpg"><img src="gallery/flora/02.jpg" alt="Photo"></a>
-    <a href="gallery/flora/03.jpg"><img src="gallery/flora/03.jpg" alt="Photo"></a>
-    <a href="gallery/flora/04.jpg"><img src="gallery/flora/04.jpg" alt="Photo"></a>
-    <a href="gallery/flora/05.jpg"><img src="gallery/flora/05.jpg" alt="Photo"></a>
-    <a href="gallery/flora/06.jpg"><img src="gallery/flora/06.jpg" alt="Photo"></a>
+    <a href="gallery/flora/01.jpg"><img src="gallery/flora/01.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/flora/02.jpg"><img src="gallery/flora/02.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/flora/03.jpg"><img src="gallery/flora/03.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/flora/04.jpg"><img src="gallery/flora/04.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/flora/05.jpg"><img src="gallery/flora/05.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/flora/06.jpg"><img src="gallery/flora/06.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
