--- a/billie.html
+++ b/billie.html
@@ -18,8 +18,8 @@
   <a href="/"><h1>dillon jordan photos</h1></a>
   <h1>Billie Eilish</h1>
   <section id="gallery">
-    <a href="gallery/billie/01.jpg"><img src="gallery/billie/01.jpg" alt="Photo"></a>
-    <a href="gallery/billie/02.jpg"><img src="gallery/billie/02.jpg" alt="Photo"></a>
+    <a href="gallery/billie/01.jpg"><img src="gallery/billie/01.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
+    <a href="gallery/billie/02.jpg"><img src="gallery/billie/02.jpg?nf_resize=fit&w=1200" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
