native lazy loading

--- a/childish.html
+++ b/childish.html
@@ -18,10 +18,10 @@
   <a href="/"><h1>dillon jordan photos</h1></a>
   <h1>Childish Gambino</h1>
   <section id="gallery">
-    <a href="images/childish/original/01.jpg"><img src="images/childish/1200/01.jpg" alt="Photo"></a>
-    <a href="images/childish/original/02.jpg"><img src="images/childish/1200/02.jpg" alt="Photo"></a>
-    <a href="images/childish/original/04.jpg"><img src="images/childish/1200/04.jpg" alt="Photo"></a>
-    <a href="images/childish/original/05.jpg"><img src="images/childish/1200/05.jpg" alt="Photo"></a>
+    <a href="images/childish/original/01.jpg"><img loading="lazy" src="images/childish/1200/01.jpg" alt="Photo"></a>
+    <a href="images/childish/original/02.jpg"><img loading="lazy" src="images/childish/1200/02.jpg" alt="Photo"></a>
+    <a href="images/childish/original/04.jpg"><img loading="lazy" src="images/childish/1200/04.jpg" alt="Photo"></a>
+    <a href="images/childish/original/05.jpg"><img loading="lazy" src="images/childish/1200/05.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
