--- a/sebastian.html
+++ b/sebastian.html
@@ -18,8 +18,8 @@
   <a href="/"><h1>dillon jordan photos</h1></a>
   <h1>Sebastian Paul</h1>
   <section id="gallery">
-    <a href="images/sebastian/original/01.jpg"><img src="images/sebastian/1200/01.jpg" alt="Photo"></a>
-    <a href="images/sebastian/original/02.jpg"><img src="images/sebastian/1200/02.jpg" alt="Photo"></a>
+    <a href="images/sebastian/original/01.jpg"><img loading="lazy" src="images/sebastian/1200/01.jpg" alt="Photo"></a>
+    <a href="images/sebastian/original/02.jpg"><img loading="lazy" src="images/sebastian/1200/02.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
