--- a/flora.html
+++ b/flora.html
@@ -19,12 +19,12 @@
   <h1>Flora Cash</h1>
   <h2>Fall Tour 2019, August - November</h2>
   <section id="gallery">
-    <a href="images/flora/original/01.jpg"><img src="images/flora/1200/01.jpg" alt="Photo"></a>
-    <a href="images/flora/original/02.jpg"><img src="images/flora/1200/02.jpg" alt="Photo"></a>
-    <a href="images/flora/original/03.jpg"><img src="images/flora/1200/03.jpg" alt="Photo"></a>
-    <a href="images/flora/original/04.jpg"><img src="images/flora/1200/04.jpg" alt="Photo"></a>
-    <a href="images/flora/original/05.jpg"><img src="images/flora/1200/05.jpg" alt="Photo"></a>
-    <a href="images/flora/original/06.jpg"><img src="images/flora/1200/06.jpg" alt="Photo"></a>
+    <a href="images/flora/original/01.jpg"><img loading="lazy" src="images/flora/1200/01.jpg" alt="Photo"></a>
+    <a href="images/flora/original/02.jpg"><img loading="lazy" src="images/flora/1200/02.jpg" alt="Photo"></a>
+    <a href="images/flora/original/03.jpg"><img loading="lazy" src="images/flora/1200/03.jpg" alt="Photo"></a>
+    <a href="images/flora/original/04.jpg"><img loading="lazy" src="images/flora/1200/04.jpg" alt="Photo"></a>
+    <a href="images/flora/original/05.jpg"><img loading="lazy" src="images/flora/1200/05.jpg" alt="Photo"></a>
+    <a href="images/flora/original/06.jpg"><img loading="lazy" src="images/flora/1200/06.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
   <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
