--- a/childish.html
+++ b/childish.html
@@ -24,6 +24,6 @@
     <a href="images/childish/original/05.jpg"><img loading="lazy" src="images/childish/1200/05.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
+  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
 </body>
 </html>
