--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img loading="lazy" src="images/sebastian/600/01.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
+  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
 </body>
 </html>
