--- a/louis.html
+++ b/louis.html
@@ -28,6 +28,6 @@
     <a href="images/louis/original/08.jpg"><img loading="lazy" src="images/louis/1200/08.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
+  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
 </body>
 </html>
