--- a/sebastian.html
+++ b/sebastian.html
@@ -22,6 +22,6 @@
     <a href="images/sebastian/original/02.jpg"><img loading="lazy" src="images/sebastian/1200/02.jpg" alt="Photo"></a>
   </section>
   <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://willdunaway.com">Will Dunaway</a></small>
+  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
 </body>
 </html>
