--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   <script>
     document.addEventListener("touchstart", function() {},false);
   </script>
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <a href="/"><h1>dillon jordan photos</h1></a>
-  <img loading="lazy" id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
-  <p>tour photographer<br><a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br><a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
-  <section id="gallery" class="main">
-    <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img loading="lazy" src="images/childish/600/04.jpg" alt="Photo"></a>
-    <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img loading="lazy" src="images/flora/600/01.jpg" alt="Photo"></a>
-    <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img loading="lazy" src="images/billie/600/01.jpg" alt="Photo"></a>
-    <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img loading="lazy" src="images/louis/600/02.jpg" alt="Photo"></a>
-    <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img loading="lazy" src="images/madeon/600/01.jpg" alt="Photo"></a>
-    <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img loading="lazy" src="images/sebastian/600/01.jpg" alt="Photo"></a>
+  <!-- <section id="cover"></section>
+  <section id="preload">
+    <h1>loading...</h1>
+  </section> -->
+  <section id="load">
+    <a href="/"><h1>dillon jordan photos</h1></a>
+    <img loading="lazy" id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
+    <p>tour photographer<br><a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br><a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
+    <section id="gallery" class="main">
+      <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img loading="lazy" src="images/childish/600/04.jpg" alt="Photo"></a>
+      <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img loading="lazy" src="images/flora/600/01.jpg" alt="Photo"></a>
+      <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img loading="lazy" src="images/billie/600/01.jpg" alt="Photo"></a>
+      <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img loading="lazy" src="images/louis/600/02.jpg" alt="Photo"></a>
+      <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img loading="lazy" src="images/madeon/600/01.jpg" alt="Photo"></a>
+      <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img loading="lazy" src="images/sebastian/600/01.jpg" alt="Photo"></a>
+    </section>
+    <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
+    <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
   </section>
-  <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
 </body>
 </html>
