--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <!-- <section id="cover"></section>
   <section id="preload">
     <h1>loading...</h1>
-  </section> -->
+  </section>
   <section id="load">
     <a href="/"><h1>dillon jordan photos</h1></a>
-    <img loading="lazy" id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
+    <img id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
     <p>tour photographer<br><a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br><a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
     <section id="gallery" class="main">
-      <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img loading="lazy" src="images/childish/600/04.jpg" alt="Photo"></a>
-      <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img loading="lazy" src="images/flora/600/01.jpg" alt="Photo"></a>
-      <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img loading="lazy" src="images/billie/600/01.jpg" alt="Photo"></a>
-      <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img loading="lazy" src="images/louis/600/02.jpg" alt="Photo"></a>
-      <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img loading="lazy" src="images/madeon/600/01.jpg" alt="Photo"></a>
-      <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img loading="lazy" src="images/sebastian/600/01.jpg" alt="Photo"></a>
+      <a href="childish.html"><div class="hovertext"><p>Childish Gambino</p></div><img src="images/childish/600/04.jpg" alt="Photo"></a>
+      <a href="flora.html"><div class="hovertext"><p>Flora Cash</p></div><img src="images/flora/600/01.jpg" alt="Photo"></a>
+      <a href="billie.html"><div class="hovertext"><p>Billie Eilish</p></div><img src="images/billie/600/01.jpg" alt="Photo"></a>
+      <a href="louis.html"><div class="hovertext"><p>Louis The Child</p></div><img src="images/louis/600/02.jpg" alt="Photo"></a>
+      <a href="madeon.html"><div class="hovertext"><p>Madeon</p></div><img src="images/madeon/600/01.jpg" alt="Photo"></a>
+      <a href="sebastian.html"><div class="hovertext"><p>Sebastian Paul</p></div><img src="images/sebastian/600/01.jpg" alt="Photo"></a>
     </section>
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
