--- a/madeon.html
+++ b/madeon.html
@@ -15,19 +15,25 @@
   <title>Madeon / dillon jordan photos</title>
 </head>
 <body>
-  <a href="/"><h1>dillon jordan photos</h1></a>
-  <h1>Madeon</h1>
-  <section id="gallery">
-    <a href="images/madeon/original/01.jpg"><img loading="lazy" src="images/madeon/1200/01.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/02.jpg"><img loading="lazy" src="images/madeon/1200/02.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/03.jpg"><img loading="lazy" src="images/madeon/1200/03.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/04.jpg"><img loading="lazy" src="images/madeon/1200/04.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/05.jpg"><img loading="lazy" src="images/madeon/1200/05.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/06.jpg"><img loading="lazy" src="images/madeon/1200/06.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/07.jpg"><img loading="lazy" src="images/madeon/1200/07.jpg" alt="Photo"></a>
-    <a href="images/madeon/original/08.jpg"><img loading="lazy" src="images/madeon/1200/08.jpg" alt="Photo"></a>
+  <section id="preload">
+    <h1>loading...</h1>
   </section>
-  <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  <section id="load">
+    <a href="/"><h1>dillon jordan photos</h1></a>
+    <h1>Madeon</h1>
+    <section id="gallery">
+      <a href="images/madeon/original/01.jpg"><img src="images/madeon/1200/01.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/02.jpg"><img src="images/madeon/1200/02.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/03.jpg"><img src="images/madeon/1200/03.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/04.jpg"><img src="images/madeon/1200/04.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/05.jpg"><img src="images/madeon/1200/05.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/06.jpg"><img src="images/madeon/1200/06.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/07.jpg"><img src="images/madeon/1200/07.jpg" alt="Photo"></a>
+      <a href="images/madeon/original/08.jpg"><img src="images/madeon/1200/08.jpg" alt="Photo"></a>
+    </section>
+    <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
+    <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
