--- a/flora.html
+++ b/flora.html
@@ -15,18 +15,24 @@
   <title>Flora Cash / dillon jordan photos</title>
 </head>
 <body>
-  <a href="/"><h1>dillon jordan photos</h1></a>
-  <h1>Flora Cash</h1>
-  <h2>Fall Tour 2019, August - November</h2>
-  <section id="gallery">
-    <a href="images/flora/original/01.jpg"><img loading="lazy" src="images/flora/1200/01.jpg" alt="Photo"></a>
-    <a href="images/flora/original/02.jpg"><img loading="lazy" src="images/flora/1200/02.jpg" alt="Photo"></a>
-    <a href="images/flora/original/03.jpg"><img loading="lazy" src="images/flora/1200/03.jpg" alt="Photo"></a>
-    <a href="images/flora/original/04.jpg"><img loading="lazy" src="images/flora/1200/04.jpg" alt="Photo"></a>
-    <a href="images/flora/original/05.jpg"><img loading="lazy" src="images/flora/1200/05.jpg" alt="Photo"></a>
-    <a href="images/flora/original/06.jpg"><img loading="lazy" src="images/flora/1200/06.jpg" alt="Photo"></a>
+  <section id="preload">
+    <h1>loading...</h1>
   </section>
-  <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  <section id="load">
+    <a href="/"><h1>dillon jordan photos</h1></a>
+    <h1>Flora Cash</h1>
+    <h2>Fall Tour 2019, August - November</h2>
+    <section id="gallery">
+      <a href="images/flora/original/01.jpg"><img src="images/flora/1200/01.jpg" alt="Photo"></a>
+      <a href="images/flora/original/02.jpg"><img src="images/flora/1200/02.jpg" alt="Photo"></a>
+      <a href="images/flora/original/03.jpg"><img src="images/flora/1200/03.jpg" alt="Photo"></a>
+      <a href="images/flora/original/04.jpg"><img src="images/flora/1200/04.jpg" alt="Photo"></a>
+      <a href="images/flora/original/05.jpg"><img src="images/flora/1200/05.jpg" alt="Photo"></a>
+      <a href="images/flora/original/06.jpg"><img src="images/flora/1200/06.jpg" alt="Photo"></a>
+    </section>
+    <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
+    <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
