--- a/sebastian.html
+++ b/sebastian.html
@@ -15,13 +15,19 @@
   <title>Sebastian Paul / dillon jordan photos</title>
 </head>
 <body>
-  <a href="/"><h1>dillon jordan photos</h1></a>
-  <h1>Sebastian Paul</h1>
-  <section id="gallery">
-    <a href="images/sebastian/original/01.jpg"><img loading="lazy" src="images/sebastian/1200/01.jpg" alt="Photo"></a>
-    <a href="images/sebastian/original/02.jpg"><img loading="lazy" src="images/sebastian/1200/02.jpg" alt="Photo"></a>
+  <section id="preload">
+    <h1>loading...</h1>
   </section>
-  <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
-  <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  <section id="load">
+    <a href="/"><h1>dillon jordan photos</h1></a>
+    <h1>Sebastian Paul</h1>
+    <section id="gallery">
+      <a href="images/sebastian/original/01.jpg"><img src="images/sebastian/1200/01.jpg" alt="Photo"></a>
+      <a href="images/sebastian/original/02.jpg"><img src="images/sebastian/1200/02.jpg" alt="Photo"></a>
+    </section>
+    <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
+    <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
