remove loading screen

--- a/childish.html
+++ b/childish.html
@@ -15,9 +15,9 @@
   <title>Childish Gambino / dillon jordan photos</title>
 </head>
 <body>
-  <section id="preload">
+  <!-- <section id="preload">
     <h1>loading...</h1>
-  </section>
+  </section> -->
   <section id="load">
     <a href="/"><h1>dillon jordan photos</h1></a>
     <h1>Childish Gambino</h1>
@@ -30,6 +30,6 @@
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
   </section>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
