--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <section id="preload">
+  <!-- <section id="preload">
     <h1>loading...</h1>
-  </section>
+  </section> -->
   <section id="load">
     <a href="/"><h1>dillon jordan photos</h1></a>
     <img id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
@@ -34,6 +34,6 @@
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
   </section>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
