--- a/louis.html
+++ b/louis.html
@@ -19,7 +19,7 @@
     <h1>loading...</h1>
   </section> -->
   <section id="load">
-    <a href="/"><h1>dillon jordan photos</h1></a>
+    <a href="./"><h1>dillon jordan photos</h1></a>
     <h1>Louis The Child</h1>
     <section id="gallery">
       <a href="images/louis/original/01.jpg"><img src="images/louis/1200/01.jpg" alt="Photo"></a>
