--- a/flora.html
+++ b/flora.html
@@ -19,7 +19,7 @@
     <h1>loading...</h1>
   </section> -->
   <section id="load">
-    <a href="./"><h1>dillon jordan photos</h1></a>
+    <a href="./"><h1>dill photos</h1></a>
     <h1>Flora Cash</h1>
     <h2>Fall Tour 2019, August - November</h2>
     <section id="gallery">
