--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>loading...</h1>
   </section> -->
   <section id="load">
-    <a href="./"><h1>dillon jordan photos</h1></a>
+    <a href="./"><h1>dill photos</h1></a>
     <img id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
     <p>tour photographer<br>instagram <a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br>email <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
     <section id="gallery" class="main">
