--- a/sebastian.html
+++ b/sebastian.html
@@ -19,7 +19,7 @@
     <h1>loading...</h1>
   </section> -->
   <section id="load">
-    <a href="./"><h1>dillon jordan photos</h1></a>
+    <a href="./"><h1>dill photos</h1></a>
     <h1>Sebastian Paul</h1>
     <section id="gallery">
       <a href="images/sebastian/original/01.jpg"><img src="images/sebastian/1200/01.jpg" alt="Photo"></a>
