add grads + portraits

--- a/louis.html
+++ b/louis.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   <script>
     document.addEventListener("touchstart", function() {},false);
   </script>
