--- a/sebastian.html
+++ b/sebastian.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   <script>
     document.addEventListener("touchstart", function() {},false);
   </script>
@@ -22,8 +23,8 @@
     <a href="./"><h1>dill photos</h1></a>
     <h1>Sebastian Paul</h1>
     <section id="gallery">
-      <a href="images/sebastian/original/01.jpg"><img src="images/sebastian/1200/01.jpg" alt="Photo"></a>
-      <a href="images/sebastian/original/02.jpg"><img src="images/sebastian/1200/02.jpg" alt="Photo"></a>
+      <img src="images/sebastian/1200/01.jpg" alt="Photo">
+      <img src="images/sebastian/1200/02.jpg" alt="Photo">
     </section>
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
