--- a/flora.html
+++ b/flora.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   <script>
     document.addEventListener("touchstart", function() {},false);
   </script>
@@ -23,12 +24,12 @@
     <h1>Flora Cash</h1>
     <h2>Fall Tour 2019, August - November</h2>
     <section id="gallery">
-      <a href="images/flora/original/01.jpg"><img src="images/flora/1200/01.jpg" alt="Photo"></a>
-      <a href="images/flora/original/02.jpg"><img src="images/flora/1200/02.jpg" alt="Photo"></a>
-      <a href="images/flora/original/03.jpg"><img src="images/flora/1200/03.jpg" alt="Photo"></a>
-      <a href="images/flora/original/04.jpg"><img src="images/flora/1200/04.jpg" alt="Photo"></a>
-      <a href="images/flora/original/05.jpg"><img src="images/flora/1200/05.jpg" alt="Photo"></a>
-      <a href="images/flora/original/06.jpg"><img src="images/flora/1200/06.jpg" alt="Photo"></a>
+      <img src="images/flora/1200/01.jpg" alt="Photo">
+      <img src="images/flora/1200/02.jpg" alt="Photo">
+      <img src="images/flora/1200/03.jpg" alt="Photo">
+      <img src="images/flora/1200/04.jpg" alt="Photo">
+      <img src="images/flora/1200/05.jpg" alt="Photo">
+      <img src="images/flora/1200/06.jpg" alt="Photo">
     </section>
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
