--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
   <title>dillon jordan photos</title>
 </head>
 <body>
-  <!-- <section id="preload">
-    <h1>loading...</h1>
-  </section> -->
   <section id="load">
     <a href="./"><h1>dill photos</h1></a>
     <img id="dil" src="images/dillon/450/dillon.jpg" alt="Dillon Jordan">
-    <p>tour photographer<br>instagram <a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br>email <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
+    <p>Dillon Jordan is a photographer.<br>instagram <a href="https://www.instagram.com/brightsidedillon">@brightsidedillon</a><br>email <a href="mailto:dillonjordan2544@gmail.com">dillonjordan2544@gmail.com</a></p>
     <section id="gallery" class="main">
       <a href="./music"><div class="hovertext"><p>Music</p></div><img src="images/childish/1200/04.jpg" alt="Photo"></a>
       <a href="./portraits"><div class="hovertext"><p>Portraits</p></div><img src="images/portraits/1200/IMG_4232.jpg" alt="Photo"></a>
@@ -32,6 +29,5 @@
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small><br>
     <small>All rights reserved</small>
   </section>
-  <!-- <script src="script.js"></script> -->
 </body>
 </html>
