--- a/louis.html
+++ b/louis.html
@@ -20,14 +20,14 @@
     <a href="./"><h1>dill photos</h1></a>
     <h1>Louis The Child</h1>
     <section id="gallery">
-      <a href="images/louis/original/01.jpg"><img src="images/louis/1200/01.jpg" alt="Photo"></a>
-      <a href="images/louis/original/02.jpg"><img src="images/louis/1200/02.jpg" alt="Photo"></a>
-      <a href="images/louis/original/03.jpg"><img src="images/louis/1200/03.jpg" alt="Photo"></a>
-      <a href="images/louis/original/04.jpg"><img src="images/louis/1200/04.jpg" alt="Photo"></a>
-      <a href="images/louis/original/05.jpg"><img src="images/louis/1200/05.jpg" alt="Photo"></a>
-      <a href="images/louis/original/06.jpg"><img src="images/louis/1200/06.jpg" alt="Photo"></a>
-      <a href="images/louis/original/07.jpg"><img src="images/louis/1200/07.jpg" alt="Photo"></a>
-      <a href="images/louis/original/08.jpg"><img src="images/louis/1200/08.jpg" alt="Photo"></a>
+      <img src="images/louis/1200/01.jpg" alt="Photo">
+      <img src="images/louis/1200/02.jpg" alt="Photo">
+      <img src="images/louis/1200/03.jpg" alt="Photo">
+      <img src="images/louis/1200/04.jpg" alt="Photo">
+      <img src="images/louis/1200/05.jpg" alt="Photo">
+      <img src="images/louis/1200/06.jpg" alt="Photo">
+      <img src="images/louis/1200/07.jpg" alt="Photo">
+      <img src="images/louis/1200/08.jpg" alt="Photo">
     </section>
     <small>Copyright &copy; Dillon Jordan Photos 2020</small><br>
     <small>Designed by <a href="https://harrywilsondunaway.com">Harry Wilson Dunaway</a></small>
